# WalletTrackerBackend

./: .gitignore  Jenkinsfile  README.md  docker-compose.yml  dtrack-to-sonarqube.py  hi.txt  hi_uploader.sh  sonar-project.properties
.github/workflows/: ci.yml
app/: .dockerignore  Dockerfile  app.py  config.py  migrate_all.py  pyproject.toml  requirements.txt
app/endpoints/: AuthenticationEndpoints.py
app/tests/: conftest.py  test_expense_categories.py  test_expenses.py  test_importes.py  test_register.py  test_seasons.py
app/tests/e2e/: conftest.py  test_auth_flow.py
app/utils/: Logger.py
docs/: coverage.md
terraform/: backend.tf  database.tf  providers.tf  variables.tf
tests/: test_expense_categories.py  test_importes.py  test_login.py  test_refresh.py
